syntax="proto3";

package OES;

option go_package = "proto/OES";

service User {
    rpc getUser(UserToken) returns(UserResponse);
}

service Lessons {
    rpc DeleteLesson(Lesson) returns();

    rpc UpdateLesson(Lesson) returns();

    rpc CreateLesson(Lesson) returns();

    rpc GetLessonsByUser(User, TimeFrame) returns(LessonResponse);

    rpc CreateAssignment(Assignment) returns();

    rpc UpdateAssignment(Assignment) returns();

    rpc DeleteAssignment(Assignment) returns();

    rpc AddAssignmentToLesson(Assignment) return();

    rpc RemoveAssignmentFromLesson(Assignment) return();

    rpc GetAssignmentsByLesson(Lesson) returns(AssignmentResponse);

    rpc AddUserToLesson(User) returns();

    rpc DeleteUserFromLesson(User, Lesson) returns();
}

message Lesson {

}

message UserToken {

}

message State {

}

message UserResponse {
   
}

message User {
   
}

message LessonResponse {
   
}

message AssignmentResponse {
   
}



